eventfs: Have event files and directories default to parent uid and gid (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3988,6 +3988,7 @@
 	patches.kernel.org/6.6.18-284-eventfs-Do-not-allow-NULL-parent-to-eventfs_st.patch
 	patches.kernel.org/6.6.18-285-eventfs-Make-sure-that-parent-d_inode-is-locke.patch
 	patches.kernel.org/6.6.18-286-eventfs-Fix-events-beyond-NAME_MAX-blocking-ta.patch
+	patches.kernel.org/6.6.18-287-eventfs-Have-event-files-and-directories-defau.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
