--- a/series.conf
+++ b/series.conf
@@ -4039,6 +4039,7 @@
 	patches.kernel.org/6.6.18-335-x86-barrier-Do-not-serialize-MSR-accesses-on-A.patch
 	patches.kernel.org/6.6.18-336-Documentation-arch-ia64-features.rst-fix-kerne.patch
 	patches.kernel.org/6.6.18-337-tracing-Make-system_callback-function-static.patch
+	patches.kernel.org/6.6.18-338-tracing-Fix-a-NULL-vs-IS_ERR-bug-in-event_subs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
