powerpc/kasan: Limit KASAN thread size increase to 32KB (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3800,6 +3800,7 @@
 	patches.kernel.org/6.6.18-096-i2c-qcom-geni-Correct-I2C-TRE-sequence.patch
 	patches.kernel.org/6.6.18-097-irqchip-loongson-eiointc-Use-correct-struct-ty.patch
 	patches.kernel.org/6.6.18-098-irqchip-gic-v3-its-Handle-non-coherent-GICv4-r.patch
+	patches.kernel.org/6.6.18-099-powerpc-kasan-Limit-KASAN-thread-size-increase.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
