--- a/series.conf
+++ b/series.conf
@@ -3745,6 +3745,7 @@
 	patches.kernel.org/6.6.18-041-tls-fix-race-between-async-notify-and-socket-c.patch
 	patches.kernel.org/6.6.18-042-tls-fix-race-between-tx-work-scheduling-and-so.patch
 	patches.kernel.org/6.6.18-043-net-tls-handle-backlogging-of-crypto-requests.patch
+	patches.kernel.org/6.6.18-044-net-tls-fix-use-after-free-with-partial-reads-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
