--- a/series.conf
+++ b/series.conf
@@ -3810,6 +3810,7 @@
 	patches.kernel.org/6.6.18-106-selftests-mptcp-add-missing-kconfig-for-NF-Fil.patch
 	patches.kernel.org/6.6.18-107-selftests-mptcp-add-missing-kconfig-for-NF-Man.patch
 	patches.kernel.org/6.6.18-108-selftests-mptcp-increase-timeout-to-30-min.patch
+	patches.kernel.org/6.6.18-109-selftests-mptcp-allow-changing-subtests-prefix.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
