selftests/mm: switch to bash from sh (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3760,6 +3760,7 @@
 	patches.kernel.org/6.6.18-056-selftests-mm-ksm_tests-should-only-MADV_HUGEPA.patch
 	patches.kernel.org/6.6.18-057-scs-add-CONFIG_MMU-dependency-for-vfree_atomic.patch
 	patches.kernel.org/6.6.18-058-tracing-trigger-Fix-to-return-error-if-failed-.patch
+	patches.kernel.org/6.6.18-059-selftests-mm-switch-to-bash-from-sh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
