tools/rtla: Fix Makefile compiler options for clang (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3931,6 +3931,7 @@
 	patches.kernel.org/6.6.18-227-tools-rtla-Fix-clang-warning-about-mount_point.patch
 	patches.kernel.org/6.6.18-228-tools-rtla-Exit-with-EXIT_SUCCESS-when-help-is.patch
 	patches.kernel.org/6.6.18-229-tools-rtla-Fix-uninitialized-bucket-data-bucke.patch
+	patches.kernel.org/6.6.18-230-tools-rtla-Fix-Makefile-compiler-options-for-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
