--- a/series.conf
+++ b/series.conf
@@ -3847,6 +3847,7 @@
 	patches.kernel.org/6.6.18-143-binder-signal-epoll-threads-of-self-work.patch
 	patches.kernel.org/6.6.18-144-misc-fastrpc-Mark-all-sessions-as-invalid-in-c.patch
 	patches.kernel.org/6.6.18-145-ext4-fix-double-free-of-blocks-due-to-wrong-ex.patch
+	patches.kernel.org/6.6.18-146-ext4-avoid-bb_free-and-bb_fragments-inconsiste.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
