--- a/series.conf
+++ b/series.conf
@@ -3779,6 +3779,7 @@
 	patches.kernel.org/6.6.18-075-iio-hid-sensor-als-Return-0-for-HID_USAGE_SENS.patch
 	patches.kernel.org/6.6.18-076-usb-ucsi-Add-missing-ppm_lock.patch
 	patches.kernel.org/6.6.18-077-usb-ulpi-Fix-debugfs-directory-leak.patch
+	patches.kernel.org/6.6.18-078-usb-ucsi_acpi-Fix-command-completion-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
