selftests: mptcp: add missing kconfig for NF Filter (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3806,6 +3806,7 @@
 	patches.kernel.org/6.6.18-102-modpost-trim-leading-spaces-when-processing-so.patch
 	patches.kernel.org/6.6.18-103-kallsyms-ignore-ARMv4-thunks-along-with-others.patch
 	patches.kernel.org/6.6.18-104-mptcp-fix-data-re-injection-from-stale-subflow.patch
+	patches.kernel.org/6.6.18-105-selftests-mptcp-add-missing-kconfig-for-NF-Fil.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
