HID: i2c-hid-of: fix NULL-deref on failed power up (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3773,6 +3773,7 @@
 	patches.kernel.org/6.6.18-069-ALSA-hda-realtek-Enable-Mute-LED-on-HP-Laptop-.patch
 	patches.kernel.org/6.6.18-070-HID-bpf-remove-double-fdget.patch
 	patches.kernel.org/6.6.18-071-HID-bpf-actually-free-hdev-memory-after-attach.patch
+	patches.kernel.org/6.6.18-072-HID-i2c-hid-of-fix-NULL-deref-on-failed-power-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
