--- a/series.conf
+++ b/series.conf
@@ -4005,6 +4005,7 @@
 	patches.kernel.org/6.6.18-301-eventfs-Save-directory-inodes-in-the-eventfs_i.patch
 	patches.kernel.org/6.6.18-302-tracefs-remove-stale-update_gid-code.patch
 	patches.kernel.org/6.6.18-303-tracefs-Zero-out-the-tracefs_inode-when-alloca.patch
+	patches.kernel.org/6.6.18-304-eventfs-Initialize-the-tracefs-inode-properly.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
