nouveau/svm: fix kvcalloc() argument order (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3750,6 +3750,7 @@
 	patches.kernel.org/6.6.18-046-spi-ppc4xx-Drop-write-only-variable.patch
 	patches.kernel.org/6.6.18-047-ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect.patch
 	patches.kernel.org/6.6.18-048-net-sysfs-Fix-sys-class-net-iface-path-for-sta.patch
+	patches.kernel.org/6.6.18-049-nouveau-svm-fix-kvcalloc-argument-order.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
