--- a/series.conf
+++ b/series.conf
@@ -3770,6 +3770,7 @@
 	patches.kernel.org/6.6.18-066-ASoC-amd-yc-Add-DMI-quirk-for-MSI-Bravo-15-C7V.patch
 	patches.kernel.org/6.6.18-067-parisc-Prevent-hung-tasks-when-printing-invent.patch
 	patches.kernel.org/6.6.18-068-ALSA-hda-realtek-Fix-the-external-mic-not-bein.patch
+	patches.kernel.org/6.6.18-069-ALSA-hda-realtek-Enable-Mute-LED-on-HP-Laptop-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
