--- a/series.conf
+++ b/series.conf
@@ -3954,6 +3954,7 @@
 	patches.kernel.org/6.6.18-250-tracing-Fix-HAVE_DYNAMIC_FTRACE_WITH_REGS-ifde.patch
 	patches.kernel.org/6.6.18-251-tracing-Inform-kmemleak-of-saved_cmdlines-allo.patch
 	patches.kernel.org/6.6.18-252-md-bypass-block-throttle-for-superblock-update.patch
+	patches.kernel.org/6.6.18-253-block-fix-partial-zone-append-completion-handl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
