--- a/series.conf
+++ b/series.conf
@@ -3919,6 +3919,7 @@
 	patches.kernel.org/6.6.18-215-KVM-arm64-Fix-circular-locking-dependency.patch
 	patches.kernel.org/6.6.18-216-zonefs-Improve-error-handling.patch
 	patches.kernel.org/6.6.18-217-mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-.patch
+	patches.kernel.org/6.6.18-218-arm64-signal-Don-t-assume-that-TIF_SVE-means-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
