eventfs: Do ctx->pos update for all iterations in eventfs_iterate() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3996,6 +3996,7 @@
 	patches.kernel.org/6.6.18-292-eventfs-Stop-using-dcache_readdir-for-getdents.patch
 	patches.kernel.org/6.6.18-293-tracefs-eventfs-Use-root-and-instance-inodes-a.patch
 	patches.kernel.org/6.6.18-294-eventfs-Have-eventfs_iterate-stop-immediately-.patch
+	patches.kernel.org/6.6.18-295-eventfs-Do-ctx-pos-update-for-all-iterations-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
