--- a/series.conf
+++ b/series.conf
@@ -3754,6 +3754,7 @@
 	patches.kernel.org/6.6.18-050-MIPS-Add-memory-clobber-to-csum_ipv6_magic-inl.patch
 	patches.kernel.org/6.6.18-051-ptrace-Introduce-exception_ip-arch-hook.patch
 	patches.kernel.org/6.6.18-052-mm-memory-Use-exception-ip-to-search-exception.patch
+	patches.kernel.org/6.6.18-053-i40e-Do-not-allow-untrusted-VF-to-remove-admin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
