--- a/series.conf
+++ b/series.conf
@@ -3836,6 +3836,7 @@
 	patches.kernel.org/6.6.18-132-parisc-BTLB-Fix-crash-when-setting-up-BTLB-at-.patch
 	patches.kernel.org/6.6.18-133-xen-netback-properly-sync-TX-responses.patch
 	patches.kernel.org/6.6.18-134-um-Fix-adding-no-pie-for-clang.patch
+	patches.kernel.org/6.6.18-135-linux-init-remove-__memexit-annotations.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
