smb: Fix regression in writes when non-standard maximum write size negotiated (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3915,6 +3915,7 @@
 	patches.kernel.org/6.6.18-211-irqchip-gic-v3-its-Fix-GICv4.1-VPE-affinity-up.patch
 	patches.kernel.org/6.6.18-212-thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_.patch
 	patches.kernel.org/6.6.18-213-smb-client-set-correct-id-uid-and-cruid-for-mu.patch
+	patches.kernel.org/6.6.18-214-smb-Fix-regression-in-writes-when-non-standard.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
