Revert "workqueue: Override implicit ordered attribute in workqueue_apply_unbound_cpumask()" (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3854,6 +3854,7 @@
 	patches.kernel.org/6.6.18-150-tracing-probes-Fix-to-show-a-parse-error-for-b.patch
 	patches.kernel.org/6.6.18-151-tracing-probes-Fix-to-set-arg-size-and-fmt-aft.patch
 	patches.kernel.org/6.6.18-152-tracing-probes-Fix-to-search-structure-fields-.patch
+	patches.kernel.org/6.6.18-153-Revert-workqueue-Override-implicit-ordered-att.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
