tracefs/eventfs: Modify mismatched function name (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3968,6 +3968,7 @@
 	patches.kernel.org/6.6.18-264-eventfs-Use-eventfs_remove_events_dir.patch
 	patches.kernel.org/6.6.18-265-eventfs-Use-ERR_CAST-in-eventfs_create_events_.patch
 	patches.kernel.org/6.6.18-266-eventfs-Fix-failure-path-in-eventfs_create_eve.patch
+	patches.kernel.org/6.6.18-267-tracefs-eventfs-Modify-mismatched-function-nam.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
