btrfs: don't reserve space for checksums when writing to nocow files (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3710,6 +3710,7 @@
 	patches.kernel.org/6.6.18-006-btrfs-do-not-ASSERT-if-the-newly-created-subvo.patch
 	patches.kernel.org/6.6.18-007-btrfs-forbid-deleting-live-subvol-qgroup.patch
 	patches.kernel.org/6.6.18-008-btrfs-send-return-EOPNOTSUPP-on-unknown-flags.patch
+	patches.kernel.org/6.6.18-009-btrfs-don-t-reserve-space-for-checksums-when-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
