--- a/series.conf
+++ b/series.conf
@@ -3761,6 +3761,7 @@
 	patches.kernel.org/6.6.18-057-scs-add-CONFIG_MMU-dependency-for-vfree_atomic.patch
 	patches.kernel.org/6.6.18-058-tracing-trigger-Fix-to-return-error-if-failed-.patch
 	patches.kernel.org/6.6.18-059-selftests-mm-switch-to-bash-from-sh.patch
+	patches.kernel.org/6.6.18-060-mm-writeback-fix-possible-divide-by-zero-in-wb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
