--- a/series.conf
+++ b/series.conf
@@ -3961,6 +3961,7 @@
 	patches.kernel.org/6.6.18-257-Revert-eventfs-Do-not-allow-NULL-parent-to-eve.patch
 	patches.kernel.org/6.6.18-258-Revert-eventfs-Check-for-NULL-ef-in-eventfs_se.patch
 	patches.kernel.org/6.6.18-259-Revert-eventfs-Use-simple_recursive_removal-to.patch
+	patches.kernel.org/6.6.18-260-Revert-eventfs-Delete-eventfs_inode-when-the-l.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
