--- a/series.conf
+++ b/series.conf
@@ -4007,6 +4007,7 @@
 	patches.kernel.org/6.6.18-303-tracefs-Zero-out-the-tracefs_inode-when-alloca.patch
 	patches.kernel.org/6.6.18-304-eventfs-Initialize-the-tracefs-inode-properly.patch
 	patches.kernel.org/6.6.18-305-tracefs-Avoid-using-the-ei-dentry-pointer-unne.patch
+	patches.kernel.org/6.6.18-306-tracefs-dentry-lookup-crapectomy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
