connector/cn_proc: revert "connector: Fix proc_event_num_listeners count not cleared" (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3821,6 +3821,7 @@
 	patches.kernel.org/6.6.18-117-scsi-Revert-scsi-fcoe-Fix-potential-deadlock-o.patch
 	patches.kernel.org/6.6.18-118-Revert-drm-amd-flush-any-delayed-gfxoff-on-sus.patch
 	patches.kernel.org/6.6.18-119-Revert-drm-msm-gpu-Push-gpu-lock-down-past-run.patch
+	patches.kernel.org/6.6.18-120-connector-cn_proc-revert-connector-Fix-proc_ev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
