eventfs: Clean up dentry ops and add revalidate function (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4009,6 +4009,7 @@
 	patches.kernel.org/6.6.18-305-tracefs-Avoid-using-the-ei-dentry-pointer-unne.patch
 	patches.kernel.org/6.6.18-306-tracefs-dentry-lookup-crapectomy.patch
 	patches.kernel.org/6.6.18-307-eventfs-Remove-unused-d_parent-pointer-field.patch
+	patches.kernel.org/6.6.18-308-eventfs-Clean-up-dentry-ops-and-add-revalidate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
