--- a/series.conf
+++ b/series.conf
@@ -3742,6 +3742,7 @@
 	patches.kernel.org/6.6.18-038-lan966x-Fix-crash-when-adding-interface-under-.patch
 	patches.kernel.org/6.6.18-039-tls-extract-context-alloc-initialization-out-o.patch
 	patches.kernel.org/6.6.18-040-net-tls-factor-out-tls_-crypt_async_wait.patch
+	patches.kernel.org/6.6.18-041-tls-fix-race-between-async-notify-and-socket-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
