btrfs: send: return EOPNOTSUPP on unknown flags (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3709,6 +3709,7 @@
 	patches.kernel.org/6.6.18-005-btrfs-forbid-creating-subvol-qgroups.patch
 	patches.kernel.org/6.6.18-006-btrfs-do-not-ASSERT-if-the-newly-created-subvo.patch
 	patches.kernel.org/6.6.18-007-btrfs-forbid-deleting-live-subvol-qgroup.patch
+	patches.kernel.org/6.6.18-008-btrfs-send-return-EOPNOTSUPP-on-unknown-flags.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
