--- a/series.conf
+++ b/series.conf
@@ -4025,6 +4025,7 @@
 	patches.kernel.org/6.6.18-321-x86-boot-Drop-references-to-startup_64.patch
 	patches.kernel.org/6.6.18-322-x86-boot-Grab-kernel_info-offset-from-zoffset-.patch
 	patches.kernel.org/6.6.18-323-x86-boot-Set-EFI-handover-offset-directly-in-h.patch
+	patches.kernel.org/6.6.18-324-x86-boot-Define-setup-size-in-linker-script.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
