--- a/series.conf
+++ b/series.conf
@@ -3752,6 +3752,7 @@
 	patches.kernel.org/6.6.18-048-net-sysfs-Fix-sys-class-net-iface-path-for-sta.patch
 	patches.kernel.org/6.6.18-049-nouveau-svm-fix-kvcalloc-argument-order.patch
 	patches.kernel.org/6.6.18-050-MIPS-Add-memory-clobber-to-csum_ipv6_magic-inl.patch
+	patches.kernel.org/6.6.18-051-ptrace-Introduce-exception_ip-arch-hook.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
