powerpc/pseries/iommu: Fix iommu initialisation during DLPAR add (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3789,6 +3789,7 @@
 	patches.kernel.org/6.6.18-085-interconnect-qcom-sm8550-Enable-sync_state.patch
 	patches.kernel.org/6.6.18-086-media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 	patches.kernel.org/6.6.18-087-driver-core-fw_devlink-Improve-detection-of-ov.patch
+	patches.kernel.org/6.6.18-088-powerpc-pseries-iommu-Fix-iommu-initialisation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
