x86/efi: Drop alignment flags from PE section headers (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4018,6 +4018,7 @@
 	patches.kernel.org/6.6.18-314-nfsd-don-t-take-fi_lock-in-nfsd_break_deleg_cb.patch
 	patches.kernel.org/6.6.18-315-x86-efi-Drop-EFI-stub-.bss-from-.data-section.patch
 	patches.kernel.org/6.6.18-316-x86-efi-Disregard-setup-header-of-loaded-image.patch
+	patches.kernel.org/6.6.18-317-x86-efi-Drop-alignment-flags-from-PE-section-h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
