ASoC: codecs: wcd938x: handle deferred probe (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3841,6 +3841,7 @@
 	patches.kernel.org/6.6.18-137-usb-typec-tpcm-Fix-issues-with-power-being-rem.patch
 	patches.kernel.org/6.6.18-138-ALSA-hda-realtek-Enable-headset-mic-on-Vaio-VJ.patch
 	patches.kernel.org/6.6.18-139-ALSA-hda-realtek-Add-speaker-pin-verbtable-for.patch
+	patches.kernel.org/6.6.18-140-ASoC-codecs-wcd938x-handle-deferred-probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
