ring-buffer: Clean ring_buffer_poll_wait() error return (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3875,6 +3875,7 @@
 	patches.kernel.org/6.6.18-171-drm-amd-display-Increase-frame-larger-than-for.patch
 	patches.kernel.org/6.6.18-172-drm-amd-display-Preserve-original-aspect-ratio.patch
 	patches.kernel.org/6.6.18-173-hv_netvsc-Fix-race-condition-between-netvsc_pr.patch
+	patches.kernel.org/6.6.18-174-ring-buffer-Clean-ring_buffer_poll_wait-error-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
