x86/mm/ident_map: Use gbpages only where full GB page should be mapped (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3893,6 +3893,7 @@
 	patches.kernel.org/6.6.18-189-x86-fpu-Stop-relying-on-userspace-for-info-to-.patch
 	patches.kernel.org/6.6.18-190-KVM-x86-make-KVM_REQ_NMI-request-iff-NMI-pendi.patch
 	patches.kernel.org/6.6.18-191-KVM-x86-pmu-Fix-type-length-error-when-reading.patch
+	patches.kernel.org/6.6.18-192-x86-mm-ident_map-Use-gbpages-only-where-full-G.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
