--- a/series.conf
+++ b/series.conf
@@ -3862,6 +3862,7 @@
 	patches.kernel.org/6.6.18-158-iio-accel-bma400-Fix-a-compilation-problem.patch
 	patches.kernel.org/6.6.18-159-iio-adc-ad_sigma_delta-ensure-proper-DMA-align.patch
 	patches.kernel.org/6.6.18-160-iio-imu-adis-ensure-proper-DMA-alignment.patch
+	patches.kernel.org/6.6.18-161-iio-imu-bno055-serdev-requires-REGMAP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
