mm: hugetlb pages should not be reserved by shmat() if SHM_NORESERVE (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3941,6 +3941,7 @@
 	patches.kernel.org/6.6.18-237-hv_netvsc-Register-VF-in-netvsc_probe-if-NET_D.patch
 	patches.kernel.org/6.6.18-238-ceph-prevent-use-after-free-in-encode_cap_msg.patch
 	patches.kernel.org/6.6.18-239-fs-hugetlb-fix-NULL-pointer-dereference-in-hug.patch
+	patches.kernel.org/6.6.18-240-mm-hugetlb-pages-should-not-be-reserved-by-shm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
