selftests/mm: Update va_high_addr_switch.sh to check CPU for la57 flag (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3762,6 +3762,7 @@
 	patches.kernel.org/6.6.18-058-tracing-trigger-Fix-to-return-error-if-failed-.patch
 	patches.kernel.org/6.6.18-059-selftests-mm-switch-to-bash-from-sh.patch
 	patches.kernel.org/6.6.18-060-mm-writeback-fix-possible-divide-by-zero-in-wb.patch
+	patches.kernel.org/6.6.18-061-selftests-mm-Update-va_high_addr_switch.sh-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
