serial: max310x: set default value when reading clock ready bit (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3879,6 +3879,7 @@
 	patches.kernel.org/6.6.18-175-net-dsa-mv88e6xxx-Fix-failed-probe-due-to-unsu.patch
 	patches.kernel.org/6.6.18-176-nfp-flower-add-hardware-offload-check-for-post.patch
 	patches.kernel.org/6.6.18-177-nfp-flower-fix-hardware-offload-for-the-transf.patch
+	patches.kernel.org/6.6.18-178-serial-max310x-set-default-value-when-reading-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
