--- a/series.conf
+++ b/series.conf
@@ -3916,6 +3916,7 @@
 	patches.kernel.org/6.6.18-212-thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_.patch
 	patches.kernel.org/6.6.18-213-smb-client-set-correct-id-uid-and-cruid-for-mu.patch
 	patches.kernel.org/6.6.18-214-smb-Fix-regression-in-writes-when-non-standard.patch
+	patches.kernel.org/6.6.18-215-KVM-arm64-Fix-circular-locking-dependency.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
