ASoC: amd: yc: Add DMI quirk for Lenovo Ideapad Pro 5 16ARP8 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3923,6 +3923,7 @@
 	patches.kernel.org/6.6.18-219-arm64-Subscribe-Microsoft-Azure-Cobalt-100-to-.patch
 	patches.kernel.org/6.6.18-220-ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
 	patches.kernel.org/6.6.18-221-ASoC-tas2781-add-module-parameter-to-tascodec_.patch
+	patches.kernel.org/6.6.18-222-ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-Ideapad-P.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
