modpost: trim leading spaces when processing source files list (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3803,6 +3803,7 @@
 	patches.kernel.org/6.6.18-099-powerpc-kasan-Limit-KASAN-thread-size-increase.patch
 	patches.kernel.org/6.6.18-100-i2c-pasemi-split-driver-into-two-separate-modu.patch
 	patches.kernel.org/6.6.18-101-i2c-i801-Fix-block-process-call-transactions.patch
+	patches.kernel.org/6.6.18-102-modpost-trim-leading-spaces-when-processing-so.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
