--- a/series.conf
+++ b/series.conf
@@ -3817,6 +3817,7 @@
 	patches.kernel.org/6.6.18-113-mptcp-check-addrs-list-in-userspace_pm_get_loc.patch
 	patches.kernel.org/6.6.18-114-mptcp-really-cope-with-fastopen-race.patch
 	patches.kernel.org/6.6.18-115-Revert-powerpc-pseries-iommu-Fix-iommu-initial.patch
+	patches.kernel.org/6.6.18-116-media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
