s390/qeth: Fix potential loss of L3-IP@ in case of network issues (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3934,6 +3934,7 @@
 	patches.kernel.org/6.6.18-230-tools-rtla-Fix-Makefile-compiler-options-for-c.patch
 	patches.kernel.org/6.6.18-231-fs-relax-mount_setattr-permission-checks.patch
 	patches.kernel.org/6.6.18-232-net-ethernet-ti-cpsw-enable-mac_managed_pm-to-.patch
+	patches.kernel.org/6.6.18-233-s390-qeth-Fix-potential-loss-of-L3-IP-in-case-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
