scsi: storvsc: Fix ring buffer size calculation (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3764,6 +3764,7 @@
 	patches.kernel.org/6.6.18-060-mm-writeback-fix-possible-divide-by-zero-in-wb.patch
 	patches.kernel.org/6.6.18-061-selftests-mm-Update-va_high_addr_switch.sh-to-.patch
 	patches.kernel.org/6.6.18-062-selftests-mm-fix-map_hugetlb-failure-on-64K-pa.patch
+	patches.kernel.org/6.6.18-063-scsi-storvsc-Fix-ring-buffer-size-calculation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
