eventfs: Get rid of dentry pointers without refcounts (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4010,6 +4010,7 @@
 	patches.kernel.org/6.6.18-306-tracefs-dentry-lookup-crapectomy.patch
 	patches.kernel.org/6.6.18-307-eventfs-Remove-unused-d_parent-pointer-field.patch
 	patches.kernel.org/6.6.18-308-eventfs-Clean-up-dentry-ops-and-add-revalidate.patch
+	patches.kernel.org/6.6.18-309-eventfs-Get-rid-of-dentry-pointers-without-ref.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
