--- a/series.conf
+++ b/series.conf
@@ -3807,6 +3807,7 @@
 	patches.kernel.org/6.6.18-103-kallsyms-ignore-ARMv4-thunks-along-with-others.patch
 	patches.kernel.org/6.6.18-104-mptcp-fix-data-re-injection-from-stale-subflow.patch
 	patches.kernel.org/6.6.18-105-selftests-mptcp-add-missing-kconfig-for-NF-Fil.patch
+	patches.kernel.org/6.6.18-106-selftests-mptcp-add-missing-kconfig-for-NF-Fil.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
