tracing: Fix HAVE_DYNAMIC_FTRACE_WITH_REGS ifdef (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3951,6 +3951,7 @@
 	patches.kernel.org/6.6.18-247-can-j1939-Fix-UAF-in-j1939_sk_match_filter-dur.patch
 	patches.kernel.org/6.6.18-248-pmdomain-core-Move-the-unused-cleanup-to-a-_sy.patch
 	patches.kernel.org/6.6.18-249-fs-proc-do_task_stat-move-thread_group_cputime.patch
+	patches.kernel.org/6.6.18-250-tracing-Fix-HAVE_DYNAMIC_FTRACE_WITH_REGS-ifde.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
