xen-netback: properly sync TX responses (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3834,6 +3834,7 @@
 	patches.kernel.org/6.6.18-130-net-hsr-remove-WARN_ONCE-in-send_hsr_supervisi.patch
 	patches.kernel.org/6.6.18-131-net-stmmac-do-not-clear-TBS-enable-bit-on-link.patch
 	patches.kernel.org/6.6.18-132-parisc-BTLB-Fix-crash-when-setting-up-BTLB-at-.patch
+	patches.kernel.org/6.6.18-133-xen-netback-properly-sync-TX-responses.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
