cifs: fix underflow in parse_server_interfaces() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3796,6 +3796,7 @@
 	patches.kernel.org/6.6.18-092-PCI-Fix-active-state-requirement-in-PME-pollin.patch
 	patches.kernel.org/6.6.18-093-iio-adc-ad4130-zero-initialize-clock-init-data.patch
 	patches.kernel.org/6.6.18-094-iio-adc-ad4130-only-set-GPIO_CTRL-if-pin-is-un.patch
+	patches.kernel.org/6.6.18-095-cifs-fix-underflow-in-parse_server_interfaces.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
