btrfs: don't drop extent_map for free space inode on write error (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3712,6 +3712,7 @@
 	patches.kernel.org/6.6.18-008-btrfs-send-return-EOPNOTSUPP-on-unknown-flags.patch
 	patches.kernel.org/6.6.18-009-btrfs-don-t-reserve-space-for-checksums-when-w.patch
 	patches.kernel.org/6.6.18-010-btrfs-reject-encoded-write-if-inode-has-nodata.patch
+	patches.kernel.org/6.6.18-011-btrfs-don-t-drop-extent_map-for-free-space-ino.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
