ASoC: SOF: ipc3-topology: Fix pipeline tear down logic (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3723,6 +3723,7 @@
 	patches.kernel.org/6.6.18-019-KVM-selftests-Fix-a-semaphore-imbalance-in-the.patch
 	patches.kernel.org/6.6.18-020-wifi-iwlwifi-Fix-some-error-codes.patch
 	patches.kernel.org/6.6.18-021-wifi-iwlwifi-uninitialized-variable-in-iwl_acp.patch
+	patches.kernel.org/6.6.18-022-ASoC-SOF-ipc3-topology-Fix-pipeline-tear-down-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
