net: tls: handle backlogging of crypto requests (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3744,6 +3744,7 @@
 	patches.kernel.org/6.6.18-040-net-tls-factor-out-tls_-crypt_async_wait.patch
 	patches.kernel.org/6.6.18-041-tls-fix-race-between-async-notify-and-socket-c.patch
 	patches.kernel.org/6.6.18-042-tls-fix-race-between-tx-work-scheduling-and-so.patch
+	patches.kernel.org/6.6.18-043-net-tls-handle-backlogging-of-crypto-requests.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
