eventfs: Fix events beyond NAME_MAX blocking tasks (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3987,6 +3987,7 @@
 	patches.kernel.org/6.6.18-283-eventfs-Move-taking-of-inode_lock-into-dcache_.patch
 	patches.kernel.org/6.6.18-284-eventfs-Do-not-allow-NULL-parent-to-eventfs_st.patch
 	patches.kernel.org/6.6.18-285-eventfs-Make-sure-that-parent-d_inode-is-locke.patch
+	patches.kernel.org/6.6.18-286-eventfs-Fix-events-beyond-NAME_MAX-blocking-ta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
