drm/prime: Support page array >= 4GB (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3869,6 +3869,7 @@
 	patches.kernel.org/6.6.18-165-ksmbd-free-aux-buffer-if-ksmbd_iov_pin_rsp_rea.patch
 	patches.kernel.org/6.6.18-166-drm-msm-Wire-up-tlb-ops.patch
 	patches.kernel.org/6.6.18-167-drm-amd-display-Add-align-done-check.patch
+	patches.kernel.org/6.6.18-168-drm-prime-Support-page-array-4GB.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
