--- a/series.conf
+++ b/series.conf
@@ -3748,6 +3748,7 @@
 	patches.kernel.org/6.6.18-044-net-tls-fix-use-after-free-with-partial-reads-.patch
 	patches.kernel.org/6.6.18-045-net-tls-fix-returned-read-length-with-async-de.patch
 	patches.kernel.org/6.6.18-046-spi-ppc4xx-Drop-write-only-variable.patch
+	patches.kernel.org/6.6.18-047-ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
