can: j1939: Fix UAF in j1939_sk_match_filter during setsockopt(SO_J1939_FILTER) (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3948,6 +3948,7 @@
 	patches.kernel.org/6.6.18-244-of-property-fix-typo-in-io-channels.patch
 	patches.kernel.org/6.6.18-245-can-netlink-Fix-TDCO-calculation-using-the-old.patch
 	patches.kernel.org/6.6.18-246-can-j1939-prevent-deadlock-by-changing-j1939_s.patch
+	patches.kernel.org/6.6.18-247-can-j1939-Fix-UAF-in-j1939_sk_match_filter-dur.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
