i2c: qcom-geni: Correct I2C TRE sequence (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3797,6 +3797,7 @@
 	patches.kernel.org/6.6.18-093-iio-adc-ad4130-zero-initialize-clock-init-data.patch
 	patches.kernel.org/6.6.18-094-iio-adc-ad4130-only-set-GPIO_CTRL-if-pin-is-un.patch
 	patches.kernel.org/6.6.18-095-cifs-fix-underflow-in-parse_server_interfaces.patch
+	patches.kernel.org/6.6.18-096-i2c-qcom-geni-Correct-I2C-TRE-sequence.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
