eventfs: Use eventfs_remove_events_dir() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3965,6 +3965,7 @@
 	patches.kernel.org/6.6.18-261-Revert-eventfs-Save-ownership-and-mode.patch
 	patches.kernel.org/6.6.18-262-Revert-eventfs-Remove-is_freed-union-with-rcu-.patch
 	patches.kernel.org/6.6.18-263-eventfs-Remove-eventfs_file-and-just-use-event.patch
+	patches.kernel.org/6.6.18-264-eventfs-Use-eventfs_remove_events_dir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
