--- a/series.conf
+++ b/series.conf
@@ -3895,6 +3895,7 @@
 	patches.kernel.org/6.6.18-191-KVM-x86-pmu-Fix-type-length-error-when-reading.patch
 	patches.kernel.org/6.6.18-192-x86-mm-ident_map-Use-gbpages-only-where-full-G.patch
 	patches.kernel.org/6.6.18-193-io_uring-net-fix-multishot-accept-overflow-han.patch
+	patches.kernel.org/6.6.18-194-mmc-slot-gpio-Allow-non-sleeping-GPIO-ro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
