eventfs: Warn if an eventfs_inode is freed without is_freed being set (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4011,6 +4011,7 @@
 	patches.kernel.org/6.6.18-307-eventfs-Remove-unused-d_parent-pointer-field.patch
 	patches.kernel.org/6.6.18-308-eventfs-Clean-up-dentry-ops-and-add-revalidate.patch
 	patches.kernel.org/6.6.18-309-eventfs-Get-rid-of-dentry-pointers-without-ref.patch
+	patches.kernel.org/6.6.18-310-eventfs-Warn-if-an-eventfs_inode-is-freed-with.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
