--- a/series.conf
+++ b/series.conf
@@ -3989,6 +3989,7 @@
 	patches.kernel.org/6.6.18-285-eventfs-Make-sure-that-parent-d_inode-is-locke.patch
 	patches.kernel.org/6.6.18-286-eventfs-Fix-events-beyond-NAME_MAX-blocking-ta.patch
 	patches.kernel.org/6.6.18-287-eventfs-Have-event-files-and-directories-defau.patch
+	patches.kernel.org/6.6.18-288-eventfs-Fix-file-and-directory-uid-and-gid-own.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
