--- a/series.conf
+++ b/series.conf
@@ -3977,6 +3977,7 @@
 	patches.kernel.org/6.6.18-273-eventfs-Have-a-free_ei-that-just-frees-the-eve.patch
 	patches.kernel.org/6.6.18-274-eventfs-Test-for-ei-is_freed-when-accessing-ei.patch
 	patches.kernel.org/6.6.18-275-eventfs-Save-ownership-and-mode.patch
+	patches.kernel.org/6.6.18-276-eventfs-Hold-eventfs_mutex-when-calling-callba.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
