eventfs: Remove fsnotify*() functions from lookup() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4013,6 +4013,7 @@
 	patches.kernel.org/6.6.18-309-eventfs-Get-rid-of-dentry-pointers-without-ref.patch
 	patches.kernel.org/6.6.18-310-eventfs-Warn-if-an-eventfs_inode-is-freed-with.patch
 	patches.kernel.org/6.6.18-311-eventfs-Restructure-eventfs_inode-structure-to.patch
+	patches.kernel.org/6.6.18-312-eventfs-Remove-fsnotify-functions-from-lookup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
