x86/fpu: Stop relying on userspace for info to fault in xsave buffer (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3890,6 +3890,7 @@
 	patches.kernel.org/6.6.18-186-serial-core-introduce-uart_port_tx_flags.patch
 	patches.kernel.org/6.6.18-187-serial-mxs-auart-fix-tx.patch
 	patches.kernel.org/6.6.18-188-x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-n.patch
+	patches.kernel.org/6.6.18-189-x86-fpu-Stop-relying-on-userspace-for-info-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
