nfsd: don't take fi_lock in nfsd_break_deleg_cb() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4015,6 +4015,7 @@
 	patches.kernel.org/6.6.18-311-eventfs-Restructure-eventfs_inode-structure-to.patch
 	patches.kernel.org/6.6.18-312-eventfs-Remove-fsnotify-functions-from-lookup.patch
 	patches.kernel.org/6.6.18-313-eventfs-Keep-all-directory-links-at-1.patch
+	patches.kernel.org/6.6.18-314-nfsd-don-t-take-fi_lock-in-nfsd_break_deleg_cb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
