--- a/series.conf
+++ b/series.conf
@@ -3733,6 +3733,7 @@
 	patches.kernel.org/6.6.18-029-perf-CXL-fix-mismatched-cpmu-event-opcode.patch
 	patches.kernel.org/6.6.18-030-selftests-net-convert-test_bridge_backup_port..patch
 	patches.kernel.org/6.6.18-031-selftests-net-Fix-bridge-backup-port-test-flak.patch
+	patches.kernel.org/6.6.18-032-selftests-forwarding-Fix-layer-2-miss-test-fla.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
