net/handshake: Fix handshake_req_destroy_test1 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3724,6 +3724,7 @@
 	patches.kernel.org/6.6.18-020-wifi-iwlwifi-Fix-some-error-codes.patch
 	patches.kernel.org/6.6.18-021-wifi-iwlwifi-uninitialized-variable-in-iwl_acp.patch
 	patches.kernel.org/6.6.18-022-ASoC-SOF-ipc3-topology-Fix-pipeline-tear-down-.patch
+	patches.kernel.org/6.6.18-023-net-handshake-Fix-handshake_req_destroy_test1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
