--- a/series.conf
+++ b/series.conf
@@ -3950,6 +3950,7 @@
 	patches.kernel.org/6.6.18-246-can-j1939-prevent-deadlock-by-changing-j1939_s.patch
 	patches.kernel.org/6.6.18-247-can-j1939-Fix-UAF-in-j1939_sk_match_filter-dur.patch
 	patches.kernel.org/6.6.18-248-pmdomain-core-Move-the-unused-cleanup-to-a-_sy.patch
+	patches.kernel.org/6.6.18-249-fs-proc-do_task_stat-move-thread_group_cputime.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
