iio: imu: adis: ensure proper DMA alignment (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3861,6 +3861,7 @@
 	patches.kernel.org/6.6.18-157-iio-commom-st_sensors-ensure-proper-DMA-alignm.patch
 	patches.kernel.org/6.6.18-158-iio-accel-bma400-Fix-a-compilation-problem.patch
 	patches.kernel.org/6.6.18-159-iio-adc-ad_sigma_delta-ensure-proper-DMA-align.patch
+	patches.kernel.org/6.6.18-160-iio-imu-adis-ensure-proper-DMA-alignment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
