spi: ppc4xx: Drop write-only variable (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3747,6 +3747,7 @@
 	patches.kernel.org/6.6.18-043-net-tls-handle-backlogging-of-crypto-requests.patch
 	patches.kernel.org/6.6.18-044-net-tls-fix-use-after-free-with-partial-reads-.patch
 	patches.kernel.org/6.6.18-045-net-tls-fix-returned-read-length-with-async-de.patch
+	patches.kernel.org/6.6.18-046-spi-ppc4xx-Drop-write-only-variable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
