--- a/series.conf
+++ b/series.conf
@@ -3849,6 +3849,7 @@
 	patches.kernel.org/6.6.18-145-ext4-fix-double-free-of-blocks-due-to-wrong-ex.patch
 	patches.kernel.org/6.6.18-146-ext4-avoid-bb_free-and-bb_fragments-inconsiste.patch
 	patches.kernel.org/6.6.18-147-tracing-timerlat-Move-hrtimer_init-to-timerlat.patch
+	patches.kernel.org/6.6.18-148-tracing-Fix-wasted-memory-in-saved_cmdlines-lo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
