--- a/series.conf
+++ b/series.conf
@@ -3855,6 +3855,7 @@
 	patches.kernel.org/6.6.18-151-tracing-probes-Fix-to-set-arg-size-and-fmt-aft.patch
 	patches.kernel.org/6.6.18-152-tracing-probes-Fix-to-search-structure-fields-.patch
 	patches.kernel.org/6.6.18-153-Revert-workqueue-Override-implicit-ordered-att.patch
+	patches.kernel.org/6.6.18-154-staging-iio-ad5933-fix-type-mismatch-regressio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
