of: property: Add in-ports/out-ports support to of_graph_get_port_parent() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4033,6 +4033,7 @@
 	patches.kernel.org/6.6.18-329-x86-boot-Increase-section-and-file-alignment-t.patch
 	patches.kernel.org/6.6.18-330-x86-efistub-Use-1-1-file-memory-mapping-for-PE.patch
 	patches.kernel.org/6.6.18-331-sched-membarrier-reduce-the-ability-to-hammer-.patch
+	patches.kernel.org/6.6.18-332-of-property-Add-in-ports-out-ports-support-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
