--- a/series.conf
+++ b/series.conf
@@ -3722,6 +3722,7 @@
 	patches.kernel.org/6.6.18-018-spi-imx-fix-the-burst-length-at-DMA-mode-and-C.patch
 	patches.kernel.org/6.6.18-019-KVM-selftests-Fix-a-semaphore-imbalance-in-the.patch
 	patches.kernel.org/6.6.18-020-wifi-iwlwifi-Fix-some-error-codes.patch
+	patches.kernel.org/6.6.18-021-wifi-iwlwifi-uninitialized-variable-in-iwl_acp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
