spi: imx: fix the burst length at DMA mode and CPU mode (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3719,6 +3719,7 @@
 	patches.kernel.org/6.6.18-015-KVM-selftests-Avoid-infinite-loop-in-hyperv_fe.patch
 	patches.kernel.org/6.6.18-016-of-unittest-Fix-compile-in-the-non-dynamic-cas.patch
 	patches.kernel.org/6.6.18-017-drm-msm-gem-Fix-double-resv-lock-aquire.patch
+	patches.kernel.org/6.6.18-018-spi-imx-fix-the-burst-length-at-DMA-mode-and-C.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
