--- a/series.conf
+++ b/series.conf
@@ -3860,6 +3860,7 @@
 	patches.kernel.org/6.6.18-156-iio-core-fix-memleak-in-iio_device_register_sy.patch
 	patches.kernel.org/6.6.18-157-iio-commom-st_sensors-ensure-proper-DMA-alignm.patch
 	patches.kernel.org/6.6.18-158-iio-accel-bma400-Fix-a-compilation-problem.patch
+	patches.kernel.org/6.6.18-159-iio-adc-ad_sigma_delta-ensure-proper-DMA-align.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
