powerpc/kasan: Fix addr error caused by page alignment (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3791,6 +3791,7 @@
 	patches.kernel.org/6.6.18-087-driver-core-fw_devlink-Improve-detection-of-ov.patch
 	patches.kernel.org/6.6.18-088-powerpc-pseries-iommu-Fix-iommu-initialisation.patch
 	patches.kernel.org/6.6.18-089-powerpc-6xx-set-High-BAT-Enable-flag-on-G2_LE-.patch
+	patches.kernel.org/6.6.18-090-powerpc-kasan-Fix-addr-error-caused-by-page-al.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
