--- a/series.conf
+++ b/series.conf
@@ -3866,6 +3866,7 @@
 	patches.kernel.org/6.6.18-162-iio-pressure-bmp280-Add-missing-bmp085-to-SPI-.patch
 	patches.kernel.org/6.6.18-163-pmdomain-mediatek-fix-race-conditions-with-gen.patch
 	patches.kernel.org/6.6.18-164-media-rc-bpf-attach-detach-requires-write-perm.patch
+	patches.kernel.org/6.6.18-165-ksmbd-free-aux-buffer-if-ksmbd_iov_pin_rsp_rea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
