--- a/series.conf
+++ b/series.conf
@@ -3765,6 +3765,7 @@
 	patches.kernel.org/6.6.18-061-selftests-mm-Update-va_high_addr_switch.sh-to-.patch
 	patches.kernel.org/6.6.18-062-selftests-mm-fix-map_hugetlb-failure-on-64K-pa.patch
 	patches.kernel.org/6.6.18-063-scsi-storvsc-Fix-ring-buffer-size-calculation.patch
+	patches.kernel.org/6.6.18-064-nouveau-offload-fence-uevents-work-to-workqueu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
