--- a/series.conf
+++ b/series.conf
@@ -3758,6 +3758,7 @@
 	patches.kernel.org/6.6.18-054-i40e-Fix-waiting-for-queues-of-all-VSIs-to-be-.patch
 	patches.kernel.org/6.6.18-055-userfaultfd-fix-mmap_changing-checking-in-mfil.patch
 	patches.kernel.org/6.6.18-056-selftests-mm-ksm_tests-should-only-MADV_HUGEPA.patch
+	patches.kernel.org/6.6.18-057-scs-add-CONFIG_MMU-dependency-for-vfree_atomic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
