ALSA: hda/cs35l56: select intended config FW_CS_DSP (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3729,6 +3729,7 @@
 	patches.kernel.org/6.6.18-025-devlink-Fix-command-annotation-documentation.patch
 	patches.kernel.org/6.6.18-026-of-property-Improve-finding-the-consumer-of-a-.patch
 	patches.kernel.org/6.6.18-027-of-property-Improve-finding-the-supplier-of-a-.patch
+	patches.kernel.org/6.6.18-028-ALSA-hda-cs35l56-select-intended-config-FW_CS_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
