x86/boot: Increase section and file alignment to 4k/512 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -4030,6 +4030,7 @@
 	patches.kernel.org/6.6.18-326-x86-boot-Construct-PE-COFF-.text-section-from-.patch
 	patches.kernel.org/6.6.18-327-x86-boot-Drop-PE-COFF-.reloc-section.patch
 	patches.kernel.org/6.6.18-328-x86-boot-Split-off-PE-COFF-.data-section.patch
+	patches.kernel.org/6.6.18-329-x86-boot-Increase-section-and-file-alignment-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
