md: bypass block throttle for superblock update (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3953,6 +3953,7 @@
 	patches.kernel.org/6.6.18-249-fs-proc-do_task_stat-move-thread_group_cputime.patch
 	patches.kernel.org/6.6.18-250-tracing-Fix-HAVE_DYNAMIC_FTRACE_WITH_REGS-ifde.patch
 	patches.kernel.org/6.6.18-251-tracing-Inform-kmemleak-of-saved_cmdlines-allo.patch
+	patches.kernel.org/6.6.18-252-md-bypass-block-throttle-for-superblock-update.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
