PCI: Fix active state requirement in PME polling (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3793,6 +3793,7 @@
 	patches.kernel.org/6.6.18-089-powerpc-6xx-set-High-BAT-Enable-flag-on-G2_LE-.patch
 	patches.kernel.org/6.6.18-090-powerpc-kasan-Fix-addr-error-caused-by-page-al.patch
 	patches.kernel.org/6.6.18-091-Revert-kobject-Remove-redundant-checks-for-whe.patch
+	patches.kernel.org/6.6.18-092-PCI-Fix-active-state-requirement-in-PME-pollin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
