--- a/series.conf
+++ b/series.conf
@@ -3799,6 +3799,7 @@
 	patches.kernel.org/6.6.18-095-cifs-fix-underflow-in-parse_server_interfaces.patch
 	patches.kernel.org/6.6.18-096-i2c-qcom-geni-Correct-I2C-TRE-sequence.patch
 	patches.kernel.org/6.6.18-097-irqchip-loongson-eiointc-Use-correct-struct-ty.patch
+	patches.kernel.org/6.6.18-098-irqchip-gic-v3-its-Handle-non-coherent-GICv4-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
