zonefs: Improve error handling (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3917,6 +3917,7 @@
 	patches.kernel.org/6.6.18-213-smb-client-set-correct-id-uid-and-cruid-for-mu.patch
 	patches.kernel.org/6.6.18-214-smb-Fix-regression-in-writes-when-non-standard.patch
 	patches.kernel.org/6.6.18-215-KVM-arm64-Fix-circular-locking-dependency.patch
+	patches.kernel.org/6.6.18-216-zonefs-Improve-error-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
