eventfs: Have a free_ei() that just frees the eventfs_inode (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3974,6 +3974,7 @@
 	patches.kernel.org/6.6.18-270-eventfs-Remove-extra-dget-in-eventfs_create_ev.patch
 	patches.kernel.org/6.6.18-271-eventfs-Fix-kerneldoc-of-eventfs_remove_rec.patch
 	patches.kernel.org/6.6.18-272-eventfs-Remove-is_freed-union-with-rcu-head.patch
+	patches.kernel.org/6.6.18-273-eventfs-Have-a-free_ei-that-just-frees-the-eve.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
