serial: max310x: fail probe if clock crystal is unstable (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3881,6 +3881,7 @@
 	patches.kernel.org/6.6.18-177-nfp-flower-fix-hardware-offload-for-the-transf.patch
 	patches.kernel.org/6.6.18-178-serial-max310x-set-default-value-when-reading-.patch
 	patches.kernel.org/6.6.18-179-serial-max310x-improve-crystal-stable-clock-de.patch
+	patches.kernel.org/6.6.18-180-serial-max310x-fail-probe-if-clock-crystal-is-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
