--- a/series.conf
+++ b/series.conf
@@ -3805,6 +3805,7 @@
 	patches.kernel.org/6.6.18-101-i2c-i801-Fix-block-process-call-transactions.patch
 	patches.kernel.org/6.6.18-102-modpost-trim-leading-spaces-when-processing-so.patch
 	patches.kernel.org/6.6.18-103-kallsyms-ignore-ARMv4-thunks-along-with-others.patch
+	patches.kernel.org/6.6.18-104-mptcp-fix-data-re-injection-from-stale-subflow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
