--- a/series.conf
+++ b/series.conf
@@ -3976,6 +3976,7 @@
 	patches.kernel.org/6.6.18-272-eventfs-Remove-is_freed-union-with-rcu-head.patch
 	patches.kernel.org/6.6.18-273-eventfs-Have-a-free_ei-that-just-frees-the-eve.patch
 	patches.kernel.org/6.6.18-274-eventfs-Test-for-ei-is_freed-when-accessing-ei.patch
+	patches.kernel.org/6.6.18-275-eventfs-Save-ownership-and-mode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
