net: openvswitch: limit the number of recursions from action sets (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3738,6 +3738,7 @@
 	patches.kernel.org/6.6.18-034-selftests-bridge_mdb-Use-MDB-get-instead-of-du.patch
 	patches.kernel.org/6.6.18-035-selftests-forwarding-Suppress-grep-warnings.patch
 	patches.kernel.org/6.6.18-036-selftests-forwarding-Fix-bridge-locked-port-te.patch
+	patches.kernel.org/6.6.18-037-net-openvswitch-limit-the-number-of-recursions.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
