kbuild: Fix changing ELF file type for output of gen_btf for big endian (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3829,6 +3829,7 @@
 	patches.kernel.org/6.6.18-125-lsm-fix-the-logic-in-security_inode_getsecctx.patch
 	patches.kernel.org/6.6.18-126-firewire-core-correct-documentation-of-fw_csr_.patch
 	patches.kernel.org/6.6.18-127-ALSA-hda-realtek-Apply-headset-jack-quirk-for-.patch
+	patches.kernel.org/6.6.18-128-kbuild-Fix-changing-ELF-file-type-for-output-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
