tools/rtla: Fix clang warning about mount_point var size (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3928,6 +3928,7 @@
 	patches.kernel.org/6.6.18-224-tools-rv-Fix-Makefile-compiler-options-for-cla.patch
 	patches.kernel.org/6.6.18-225-tools-rtla-Remove-unused-sched_getattr-functio.patch
 	patches.kernel.org/6.6.18-226-tools-rtla-Replace-setting-prio-with-nice-for-.patch
+	patches.kernel.org/6.6.18-227-tools-rtla-Fix-clang-warning-about-mount_point.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
