selftests: mptcp: add missing kconfig for NF Mangle (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3808,6 +3808,7 @@
 	patches.kernel.org/6.6.18-104-mptcp-fix-data-re-injection-from-stale-subflow.patch
 	patches.kernel.org/6.6.18-105-selftests-mptcp-add-missing-kconfig-for-NF-Fil.patch
 	patches.kernel.org/6.6.18-106-selftests-mptcp-add-missing-kconfig-for-NF-Fil.patch
+	patches.kernel.org/6.6.18-107-selftests-mptcp-add-missing-kconfig-for-NF-Man.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
