tracefs/eventfs: Use root and instance inodes as default ownership (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3994,6 +3994,7 @@
 	patches.kernel.org/6.6.18-290-eventfs-Fix-bitwise-fields-for-is_events.patch
 	patches.kernel.org/6.6.18-291-eventfs-Remove-lookup-parameter-from-create_di.patch
 	patches.kernel.org/6.6.18-292-eventfs-Stop-using-dcache_readdir-for-getdents.patch
+	patches.kernel.org/6.6.18-293-tracefs-eventfs-Use-root-and-instance-inodes-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
