--- a/series.conf
+++ b/series.conf
@@ -3737,6 +3737,7 @@
 	patches.kernel.org/6.6.18-033-selftests-forwarding-Fix-bridge-MDB-test-flaki.patch
 	patches.kernel.org/6.6.18-034-selftests-bridge_mdb-Use-MDB-get-instead-of-du.patch
 	patches.kernel.org/6.6.18-035-selftests-forwarding-Suppress-grep-warnings.patch
+	patches.kernel.org/6.6.18-036-selftests-forwarding-Fix-bridge-locked-port-te.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
