can: j1939: prevent deadlock by changing j1939_socks_lock to rwlock (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3947,6 +3947,7 @@
 	patches.kernel.org/6.6.18-243-docs-kernel_feat.py-fix-build-error-for-missin.patch
 	patches.kernel.org/6.6.18-244-of-property-fix-typo-in-io-channels.patch
 	patches.kernel.org/6.6.18-245-can-netlink-Fix-TDCO-calculation-using-the-old.patch
+	patches.kernel.org/6.6.18-246-can-j1939-prevent-deadlock-by-changing-j1939_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
