selftests: mptcp: add mptcp_lib_kill_wait (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3811,6 +3811,7 @@
 	patches.kernel.org/6.6.18-107-selftests-mptcp-add-missing-kconfig-for-NF-Man.patch
 	patches.kernel.org/6.6.18-108-selftests-mptcp-increase-timeout-to-30-min.patch
 	patches.kernel.org/6.6.18-109-selftests-mptcp-allow-changing-subtests-prefix.patch
+	patches.kernel.org/6.6.18-110-selftests-mptcp-add-mptcp_lib_kill_wait.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
