--- a/series.conf
+++ b/series.conf
@@ -3904,6 +3904,7 @@
 	patches.kernel.org/6.6.18-200-crypto-ccp-Fix-null-pointer-dereference-in-__s.patch
 	patches.kernel.org/6.6.18-201-crypto-algif_hash-Remove-bogus-SGL-free-on-zer.patch
 	patches.kernel.org/6.6.18-202-nfp-use-correct-macro-for-LengthSelect-in-BAR-.patch
+	patches.kernel.org/6.6.18-203-nfp-enable-NETDEV_XDP_ACT_REDIRECT-feature-fla.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
