--- a/series.conf
+++ b/series.conf
@@ -3963,6 +3963,7 @@
 	patches.kernel.org/6.6.18-259-Revert-eventfs-Use-simple_recursive_removal-to.patch
 	patches.kernel.org/6.6.18-260-Revert-eventfs-Delete-eventfs_inode-when-the-l.patch
 	patches.kernel.org/6.6.18-261-Revert-eventfs-Save-ownership-and-mode.patch
+	patches.kernel.org/6.6.18-262-Revert-eventfs-Remove-is_freed-union-with-rcu-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
