eventfs: Remove special processing of dput() of events directory (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3979,6 +3979,7 @@
 	patches.kernel.org/6.6.18-275-eventfs-Save-ownership-and-mode.patch
 	patches.kernel.org/6.6.18-276-eventfs-Hold-eventfs_mutex-when-calling-callba.patch
 	patches.kernel.org/6.6.18-277-eventfs-Delete-eventfs_inode-when-the-last-den.patch
+	patches.kernel.org/6.6.18-278-eventfs-Remove-special-processing-of-dput-of-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
