firewire: core: correct documentation of fw_csr_string() kernel API (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3827,6 +3827,7 @@
 	patches.kernel.org/6.6.18-123-drm-amd-Don-t-init-MEC2-firmware-when-it-fails.patch
 	patches.kernel.org/6.6.18-124-lsm-fix-default-return-value-of-the-socket_get.patch
 	patches.kernel.org/6.6.18-125-lsm-fix-the-logic-in-security_inode_getsecctx.patch
+	patches.kernel.org/6.6.18-126-firewire-core-correct-documentation-of-fw_csr_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
