iio: commom: st_sensors: ensure proper DMA alignment (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3858,6 +3858,7 @@
 	patches.kernel.org/6.6.18-154-staging-iio-ad5933-fix-type-mismatch-regressio.patch
 	patches.kernel.org/6.6.18-155-iio-magnetometer-rm3100-add-boundary-check-for.patch
 	patches.kernel.org/6.6.18-156-iio-core-fix-memleak-in-iio_device_register_sy.patch
+	patches.kernel.org/6.6.18-157-iio-commom-st_sensors-ensure-proper-DMA-alignm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
