--- a/series.conf
+++ b/series.conf
@@ -3967,6 +3967,7 @@
 	patches.kernel.org/6.6.18-263-eventfs-Remove-eventfs_file-and-just-use-event.patch
 	patches.kernel.org/6.6.18-264-eventfs-Use-eventfs_remove_events_dir.patch
 	patches.kernel.org/6.6.18-265-eventfs-Use-ERR_CAST-in-eventfs_create_events_.patch
+	patches.kernel.org/6.6.18-266-eventfs-Fix-failure-path-in-eventfs_create_eve.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
