usb: ulpi: Fix debugfs directory leak (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3778,6 +3778,7 @@
 	patches.kernel.org/6.6.18-074-HID-wacom-Do-not-register-input-devices-until-.patch
 	patches.kernel.org/6.6.18-075-iio-hid-sensor-als-Return-0-for-HID_USAGE_SENS.patch
 	patches.kernel.org/6.6.18-076-usb-ucsi-Add-missing-ppm_lock.patch
+	patches.kernel.org/6.6.18-077-usb-ulpi-Fix-debugfs-directory-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
