--- a/series.conf
+++ b/series.conf
@@ -3786,6 +3786,7 @@
 	patches.kernel.org/6.6.18-082-usb-core-Prevent-null-pointer-dereference-in-u.patch
 	patches.kernel.org/6.6.18-083-usb-dwc3-gadget-Fix-NULL-pointer-dereference-i.patch
 	patches.kernel.org/6.6.18-084-interconnect-qcom-sc8180x-Mark-CO0-BCM-keepali.patch
+	patches.kernel.org/6.6.18-085-interconnect-qcom-sm8550-Enable-sync_state.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
